--- a/html/credits.html
+++ b/html/credits.html
@@ -10,7 +10,8 @@
     <meta name="author" content="Thomas F Steeples" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Thomas Steeples</title>
+    <title>Thomas Steeples
+    </title>
 
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
@@ -22,9 +23,11 @@
 
 <body>
     <div id="credits-container">
-        <h1>The Secret Credits Page</h1>
+      <h1>The Secret Credits Page
+      </h1>
         <section>
-            <h2>The Creation Story</h2>
+          <h2>The Creation Story
+	  </h2>
 
             <p>
                 If you have found this page, then congrats! You're a nosy bastard who likes looking under the hood and
@@ -34,17 +37,25 @@
 
             <p>
                 How did I craft this glorious monument to hubris, I hear you say? I'm glad you asked. Originally, I had
-                heard of this nifty static site generator called <a href="https://gohugo.io">Hugo</a>. It was pretty
+                heard of this nifty static site generator called
+		<a href="https://gohugo.io">Hugo
+		</a>. It was pretty
                 cool! It was dead easy to get up and
                 running, had a nice templating syntax. Beautiful. Easy. But most importantly, it worked! No faffing
                 around with PHP or MySQL or any nonsense like that --- you could just upload the three files (or however
-                many there were) to a server and, y'know, just <em>serve</em> them. I picked a <a
-                    href="https://themes.gohugo.io/aafu/">theme</a> I liked (of which you can definitely still see the
+                many there were) to a server and, y'know, just
+		<em>serve
+		</em> them. I picked a
+		<a
+                  href="https://themes.gohugo.io/aafu/">theme
+		</a> I liked (of which you can definitely still see the
                 remnants of), and I was away.
             </p>
 
             <p>
-                Flash-forward six months. I wanted to update something. Something <em>tiny</em>. Easy, surely? I made
+              Flash-forward six months. I wanted to update something. Something
+	      <em>tiny
+	      </em>. Easy, surely? I made
                 the
                 change, and then ran Hugo. It absolutely pissed errors. So many errors. "Maybe there's an mistake in my
                 template
@@ -55,7 +66,9 @@
                 despondent.
             </p>
 
-            <p>Then it hit me - I'm a computer scientist! In <em>theory</em>, I can code. Why not just code it up by
+            <p>Then it hit me - I'm a computer scientist! In
+	      <em>theory
+	      </em>, I can code. Why not just code it up by
                 hand?
                 So I
                 set
@@ -66,27 +79,34 @@
                 of
                 time, I had a finished product. A beautiful, one-page website, my mug plastered across it, in pure HTML,
                 CSS,
-                Javascript.</p>
+              Javascript.
+	    </p>
         </section>
 
         <section>
-            <h2>Open Source Licenses</h2>
+          <h2>Open Source Licenses
+	  </h2>
 
             <p>Of course, every human endeavour stands on the shoulders of giants, and my mighty website is no
                 exception. I
                 use
                 the
-                following open-source projects in the public-facing part of my website:</p>
+              following open-source projects in the public-facing part of my website:
+	    </p>
 
-            <h3>Normalize.css</h3>
+            <h3>Normalize.css
+	    </h3>
 
             <p>
-                Components of <a href="https://github.com/necolas/normalize.css">Normalize.css</a> have been used in the
+              Components of
+	      <a href="https://github.com/necolas/normalize.css">Normalize.css
+	      </a> have been used in the
                 stylesheet. Normalize.css is used under the MIT License:
             </p>
             <blockquote>
 
-                <h4>The MIT License (MIT)</h4>
+              <h4>The MIT License (MIT)
+	      </h4>
                 <p>
                     Copyright © Nicolas Gallagher and Jonathan Neal
                 </p>
@@ -111,26 +131,34 @@
                 </p>
             </blockquote>
 
-            <h3>Feather Icons</h3>
+            <h3>Feather Icons
+	    </h3>
 
-            <p>All icons within the feather-icon class are from the <a
-                    href="https://github.com/feathericons/feather">Feather</a> project,
+            <p>All icons within the feather-icon class are from the
+	      <a
+                href="https://github.com/feathericons/feather">Feather
+	      </a> project,
                 used
-                under the MIT License:</p>
+              under the MIT License:
+	    </p>
             <blockquote>
-                <h4>The MIT License (MIT)</h4>
+              <h4>The MIT License (MIT)
+	      </h4>
 
-                <p>Copyright (c) 2013-2017 Cole Bemis</p>
+              <p>Copyright (c) 2013-2017 Cole Bemis
+	      </p>
 
                 <p>Permission is hereby granted, free of charge, to any person obtaining a copy
                     of this software and associated documentation files (the "Software"), to deal
                     in the Software without restriction, including without limitation the rights
                     to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
                     copies of the Software, and to permit persons to whom the Software is
-                    furnished to do so, subject to the following conditions:</p>
+                  furnished to do so, subject to the following conditions:
+		</p>
 
                 <p>The above copyright notice and this permission notice shall be included in all
-                    copies or substantial portions of the Software.</p>
+                  copies or substantial portions of the Software.
+		</p>
 
                 <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
                     IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
@@ -138,28 +166,38 @@
                     AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
                     LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
                     OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-                    SOFTWARE.</p>
+                  SOFTWARE.
+		</p>
             </blockquote>
 
-            <h3>Open Sans Font</h3>
+            <h3>Open Sans Font
+	    </h3>
 
-            <p>The <a href="https://github.com/googlefonts/opensans">Open Sans</a> font is used under the SIL Open Font
+            <p>The
+	      <a href="https://github.com/googlefonts/opensans">Open Sans
+	      </a> font is used under the SIL Open Font
                 License Version 1.1:
             </p>
 
             <blockquote>
-                <p>Copyright 2020 The Open Sans Project Authors (https://github.com/googlefonts/opensans)</p>
+              <p>Copyright 2020 The Open Sans Project Authors (https://github.com/googlefonts/opensans)
+	      </p>
 
-                <p>-----------------------------------------------------------</p>
-                <h4>SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007</h4>
-                <p>-----------------------------------------------------------</p>
+              <p>-----------------------------------------------------------
+	      </p>
+              <h4>SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
+	      </h4>
+              <p>-----------------------------------------------------------
+	      </p>
 
-                <h5>PREAMBLE</h5>
+              <h5>PREAMBLE
+	      </h5>
                 <p>The goals of the Open Font License (OFL) are to stimulate worldwide
                     development of collaborative font projects, to support the font
                     creation efforts of academic and linguistic communities, and to
                     provide a free and open framework in which fonts may be shared and
-                    improved in partnership with others.</p>
+                  improved in partnership with others.
+		</p>
 
                 <p>The OFL allows the licensed fonts to be used, studied, modified and
                     redistributed freely as long as they are not sold by themselves. The
@@ -168,28 +206,36 @@
                     names are not used by derivative works. The fonts and derivatives,
                     however, cannot be released under any other type of license. The
                     requirement for fonts to remain under this license does not apply to
-                    any document created using the fonts or their derivatives.</p>
+                  any document created using the fonts or their derivatives.
+		</p>
 
-                <h5>DEFINITIONS</h5>
+                <h5>DEFINITIONS
+		</h5>
                 <p>"Font Software" refers to the set of files released by the Copyright
                     Holder(s) under this license and clearly marked as such. This may
-                    include source files, build scripts and documentation.</p>
+                  include source files, build scripts and documentation.
+		</p>
 
                 <p>"Reserved Font Name" refers to any names specified as such after the
-                    copyright statement(s).</p>
+                  copyright statement(s).
+		</p>
 
                 <p>"Original Version" refers to the collection of Font Software
-                    components as distributed by the Copyright Holder(s).</p>
+                  components as distributed by the Copyright Holder(s).
+		</p>
 
                 <p>"Modified Version" refers to any derivative made by adding to,
                     deleting, or substituting -- in part or in whole -- any of the
                     components of the Original Version, by changing formats or by porting
-                    the Font Software to a new environment.</p>
+                  the Font Software to a new environment.
+		</p>
 
                 <p>"Author" refers to any designer, engineer, programmer, technical
-                    writer or other person who contributed to the Font Software.</p>
+                  writer or other person who contributed to the Font Software.
+		</p>
 
-                <h5>PERMISSION & CONDITIONS</h5>
+                <h5>PERMISSION & CONDITIONS
+		</h5>
                 <p>
                     Permission is hereby granted, free of charge, to any person obtaining
                     a copy of the Font Software, to use, study, copy, merge, embed,
@@ -232,11 +278,14 @@
                     </li>
                 </ol>
 
-                <h5>TERMINATION</h5>
+                <h5>TERMINATION
+		</h5>
                 <p>This license becomes null and void if any of the above conditions are
-                    not met.</p>
+                  not met.
+		</p>
 
-                <h5>DISCLAIMER</h5>
+                <h5>DISCLAIMER
+		</h5>
                 <p>THE FONT SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
                     EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO ANY WARRANTIES OF
                     MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT
@@ -245,34 +294,45 @@
                     INCLUDING ANY GENERAL, SPECIAL, INDIRECT, INCIDENTAL, OR CONSEQUENTIAL
                     DAMAGES, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
                     FROM, OUT OF THE USE OR INABILITY TO USE THE FONT SOFTWARE OR FROM
-                    OTHER DEALINGS IN THE FONT SOFTWARE.</p>
+                  OTHER DEALINGS IN THE FONT SOFTWARE.
+		</p>
             </blockquote>
 
-            <h3>Bagnard Font</h3>
+            <h3>Bagnard Font
+	    </h3>
 
             <p>
-                The <a href="https://github.com/sebsan/Bagnard">Bagnard</a> font is used under the SIL Open Font License
+              The
+	      <a href="https://github.com/sebsan/Bagnard">Bagnard
+	      </a> font is used under the SIL Open Font License
                 Version
                 1.1:
             </p>
 
             <blockquote>
-                <p>Copyright (c) 2015 Sebastien Sanfilippo (www.love-letters.be)</p>
+              <p>Copyright (c) 2015 Sebastien Sanfilippo (www.love-letters.be)
+	      </p>
 
                 <p>This Font Software is licensed under the SIL Open Font License, Version 1.1.
                     This license is copied below, and is also available with a FAQ at:
-                    http://scripts.sil.org/OFL</p>
+                  http://scripts.sil.org/OFL
+		</p>
 
 
-                <p>-----------------------------------------------------------</p>
-                <h4>SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007</h4>
-                <p>-----------------------------------------------------------</p>
+                <p>-----------------------------------------------------------
+		</p>
+                <h4>SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007
+		</h4>
+                <p>-----------------------------------------------------------
+		</p>
 
-                <h5>PREAMBLE</h5>
+                <h5>PREAMBLE
+		</h5>
                 <p>The goals of the Open Font License
                     (OFL) are to stimulate worldwide development of collaborative font projects, to support the font
                     creation efforts of academic and linguistic communities, and to provide a free and open framework in
-                    which fonts may be shared and improved in partnership with others.</p>
+                  which fonts may be shared and improved in partnership with others.
+		</p>
 
                 <p>The OFL allows the licensed fonts to
                     be used, studied, modified and redistributed freely as long as they are not sold by themselves. The
@@ -281,9 +341,11 @@
                     derivatives,
                     however, cannot be released under any other type of license. The requirement for fonts to remain
                     under
-                    this license does not apply to any document created using the fonts or their derivatives. </p>
+                  this license does not apply to any document created using the fonts or their derivatives.
+		</p>
 
-                <h5>DEFINITIONS</h5>
+                <h5>DEFINITIONS
+		</h5>
                 <p>
                     "Font Software" refers to the set of files released by the Copyright Holder(s) under this
                     license and clearly marked as such. This may include source files, build scripts and
@@ -306,7 +368,8 @@
                     "Author" refers to any designer, engineer,
                     programmer, technical writer or other person who contributed to the Font Software.
                 </p>
-                <h5>PERMISSION & CONDITIONS</h5>
+                <h5>PERMISSION & CONDITIONS
+		</h5>
                 <p>
                     Permission is hereby granted, free of charge, to any person obtaining a copy of the Font
                     Software, to use, study, copy, merge, embed, modify, redistribute, and sell modified and unmodified
@@ -355,7 +418,8 @@
                         Software.
                     </li>
                 </ol>
-                <h5>TERMINATION</h5>
+                <h5>TERMINATION
+		</h5>
                 <p>
                     This license becomes null and void if any of the above conditions are not met.
                 </p>
