--- a/html/index.html
+++ b/html/index.html
@@ -10,11 +10,13 @@
   <meta name="author" content="Thomas F Steeples" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Thomas Steeples</title>
+  <title>Thomas Steeples
+  </title>
 
   <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-  <script src="js/main.js" defer></script>
+  <script src="js/main.js" defer>
+  </script>
 
   <link rel="apple-touch-icon" sizes="180x180" href="media/favicons/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="media/favicons/favicon-32x32.png" />
@@ -41,22 +43,36 @@
             id="self-portrait" />
         </picture>
       </a>
-      <h1>Thomas Steeples</h1>
-      <h2>DPhil in Autonomous Intelligent Machines and Systems</h2>
-      <h3>University of Oxford</h3>
+      <h1>Thomas Steeples
+      </h1>
+      <h2>DPhil in Autonomous Intelligent Machines and Systems
+      </h2>
+      <h3>University of Oxford
+      </h3>
       <a href="mailto:thomas.steeples@cs.ox.ac.uk" class="strapline-icon">
-	<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
+	<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail">
+	  <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z">
+	  </path>
+	  <polyline points="22,6 12,13 2,6">
+	  </polyline>
+	</svg>
       </a>
       <a href="https://github.com/thomasfsteeples" class="strapline-icon">
 	<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github">
-	  <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
+	  <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
+	  </path>
 	</svg>
       </a>
     </div>
     <div id="accordion">
       <div class="panel">
         <h2 tabindex="0">
-	  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
+	  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user">
+	    <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2">
+	    </path>
+	    <circle cx="12" cy="7" r="4">
+	    </circle>
+	  </svg>
           About
         </h2>
         <div id="initially-open-contents" class="contents">
@@ -69,79 +85,128 @@
           </p>
           <p>
             When I'm not proving theorems (or at least trying to), I can be
-            found photographing the streets of Oxford and playing <a href="https://lichess.org/@/tsteeples">chess</a>.
+            found photographing the streets of Oxford and playing
+	    <a href="https://lichess.org/@/tsteeples">chess
+	    </a>.
           </p>
         </div>
       </div>
       <div class="panel">
         <h2 tabindex="0">
-	  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-award"><circle cx="12" cy="8" r="7"></circle><polyline points="8.21 13.89 7 23 12 20 17 23 15.79 13.88"></polyline></svg>
+	  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-award">
+	    <circle cx="12" cy="8" r="7">
+	    </circle>
+	    <polyline points="8.21 13.89 7 23 12 20 17 23 15.79 13.88">
+	    </polyline>
+	  </svg>
           Education
         </h2>
         <div class="contents">
           <dl>
             <dt>
-              <strong>DPhil in Autonomous Intelligent Machines and Systems</strong>
+              <strong>DPhil in Autonomous Intelligent Machines and Systems
+	      </strong>
             </dt>
-            <dd>2018 - 2022 · University of Oxford</dd>
+            <dd>2018 - 2022 · University of Oxford
+	    </dd>
           </dl>
           <dl>
-            <dt><strong>MSc in Computer Science</strong></dt>
-            <dd>2016 - 2017 · University of Oxford</dd>
-            <dd>Dissertation: Local Equilibria in Iterated Boolean Games</dd>
+            <dt>
+	      <strong>MSc in Computer Science
+	      </strong>
+	    </dt>
+            <dd>2016 - 2017 · University of Oxford
+	    </dd>
+            <dd>Dissertation: Local Equilibria in Iterated Boolean Games
+	    </dd>
           </dl>
           <dl>
-            <dt><strong>MSci in Mathematics</strong></dt>
-            <dd>2012 - 2016 · University College London</dd>
-            <dd>Dissertation: The Hyperbolic Lattice Counting Problem</dd>
+            <dt>
+	      <strong>MSci in Mathematics
+	      </strong>
+	    </dt>
+            <dd>2012 - 2016 · University College London
+	    </dd>
+            <dd>Dissertation: The Hyperbolic Lattice Counting Problem
+	    </dd>
           </dl>
         </div>
       </div>
       <div class="panel">
         <h2 tabindex="0">
-	  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-briefcase"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"></rect><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path></svg>
+	  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-briefcase">
+	    <rect x="2" y="7" width="20" height="14" rx="2" ry="2">
+	    </rect>
+	    <path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16">
+	    </path>
+	  </svg>
           Experience
         </h2>
         <div class="contents">
           <dl>
-            <dt><strong>IBM</strong></dt>
-            <dd>2017 - 2018 · Technology Consultant</dd>
+            <dt>
+	      <strong>IBM
+	      </strong>
+	    </dt>
+            <dd>2017 - 2018 · Technology Consultant
+	    </dd>
           </dl>
           <dl>
-            <dt><strong>KPMG</strong></dt>
-            <dd>2011 - 2012 · Audit Assistant</dd>
+            <dt>
+	      <strong>KPMG
+	      </strong>
+	    </dt>
+            <dd>2011 - 2012 · Audit Assistant
+	    </dd>
           </dl>
         </div>
       </div>
       <div class="panel">
         <h2 tabindex="0">
-	  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path></svg>
+	  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open">
+	    <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z">
+	    </path>
+	    <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z">
+	    </path>
+	  </svg>
           Publications
         </h2>
         <div class="contents">
           <ul>
 	    <li>
 	      	Alessandro Abate, Julian Gutierrez, Lewis Hammond, Paul Harrenstein, Marta Kwiatkowska, Muhammad Najib, Giuseppe Perelli, Thomas Steeples, Michael J. Wooldridge:
-	      <strong><a href="papers/abate2021.pdf">Rational Verification: Game-Theoretic Verification of Multi-Agent Systems.</a></strong>
+		<strong>
+		  <a href="papers/abate2021.pdf">Rational Verification: Game-Theoretic Verification of Multi-Agent Systems.
+		  </a>
+		</strong>
 	      Applied Intelligence 51, 6569–6584 (2021).
 	      </li>
             <li>
               Thomas Steeples, Julian Gutierrez, Michael J. Wooldridge:
-              <strong><a href="papers/steeples2021.pdf">Mean-Payoff Games with ω-Regular Specifications.</a></strong>
+              <strong>
+		<a href="papers/steeples2021.pdf">Mean-Payoff Games with ω-Regular Specifications.
+		</a>
+	      </strong>
               AAMAS 2021: 1272-1280.
             </li>
             <li>
               Julian Gutierrez, Aniello Murano, Giuseppe Perelli, Sasha Rubin,
               Thomas Steeples, Michael J. Wooldridge:
-              <strong><a href="papers/gutierrez2020.pdf">Equilibria for Games with Combined Qualitative and
-                  Quantitative Objectives.</a></strong>
+              <strong>
+		<a href="papers/gutierrez2020.pdf">Equilibria for Games with Combined Qualitative and
+                  Quantitative Objectives.
+		</a>
+	      </strong>
               Acta Informatica (2020). 
             </li>
             <li>
               Julian Gutierrez, Paul Harrenstein, Thomas Steeples, Michael J.
               Wooldridge:
-              <strong><a href="papers/gutierrez2018.pdf">Local Equilibria in Logic-Based Multi-Player
-                  Games.</a></strong>
+              <strong>
+		<a href="papers/gutierrez2018.pdf">Local Equilibria in Logic-Based Multi-Player
+                  Games.
+		</a>
+	      </strong>
               AAMAS 2018: 399-406.
             </li>
           </ul>
